--- a/models/random_forest_classifier_resampled.ipynb
+++ b/models/random_forest_classifier_resampled.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "id": "6Nxk1wSq_pXf"
    },
@@ -177,9 +177,9 @@
     "def random_forest_classification(X_train, y_train, X_val, y_val, X_test, y_test):\n",
     "    # Define the parameter grid for Random Forest\n",
     "    param_grid = {\n",
-    "        'n_estimators': [100, 150, 200, 250],\n",
-    "        'max_depth': [None, 5, 10, 15],\n",
-    "        'min_samples_split': [2, 4, 6, 8]\n",
+    "        'n_estimators': [50, 100, 150, 200, 250],\n",
+    "        'max_depth': [None, 3, 5, 7, 10],\n",
+    "        'min_samples_split': [2, 4, 6]\n",
     "    }\n",
     "\n",
     "    # Create Random Forest classifier\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -229,15 +229,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Parameters: {'max_depth': None, 'min_samples_split': 2, 'n_estimators': 100}\n",
+      "Best Parameters: {'max_depth': None, 'min_samples_split': 2, 'n_estimators': 50}\n",
       "\n",
-      "Validation accuracy: 0.86925\n",
+      "Validation accuracy: 0.86475\n",
       "\n",
-      "F1 Score (Validation): 0.8710926009990256\n",
+      "F1 Score (Validation): 0.8664505809473023\n",
       "\n",
-      "Testing accuracy: 0.886\n",
+      "Testing accuracy: 0.88575\n",
       "\n",
-      "F1 Score (Test): 0.8876206913455946\n"
+      "F1 Score (Test): 0.8871143438228933\n"
      ]
     }
    ],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -260,25 +260,25 @@
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(min_samples_split=5, n_estimators=150, random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(min_samples_split=5, n_estimators=150, random_state=42)</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-5 {color: black;background-color: white;}#sk-container-id-5 pre{padding: 0;}#sk-container-id-5 div.sk-toggleable {background-color: white;}#sk-container-id-5 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-5 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-5 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-5 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-5 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-5 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-5 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-5 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-5 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-5 div.sk-item {position: relative;z-index: 1;}#sk-container-id-5 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-5 div.sk-item::before, #sk-container-id-5 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-5 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-5 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-5 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-5 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-5 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-5 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-5 div.sk-label-container {text-align: center;}#sk-container-id-5 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-5 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(n_estimators=50, random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(n_estimators=50, random_state=42)</pre></div></div></div></div></div>"
       ],
       "text/plain": [
-       "RandomForestClassifier(min_samples_split=5, n_estimators=150, random_state=42)"
+       "RandomForestClassifier(n_estimators=50, random_state=42)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_classifier = RandomForestClassifier(max_depth=None, n_estimators=150, min_samples_split=5, random_state=42)\n",
+    "best_classifier = RandomForestClassifier(max_depth=None, n_estimators=50, min_samples_split=2, random_state=42)\n",
     "best_classifier.fit(X_train_oversampled, y_train_oversampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -292,29 +292,29 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Validation accuracy: 87.0750\n",
+      "Validation accuracy: 86.4750\n",
       "\n",
       "Confusion Matrix (Validation):\n",
-      "[[1034   33   16   45   48    4]\n",
-      " [  38 1134   93   19   18   10]\n",
-      " [   2   42  301    3    1    0]\n",
-      " [  14   15    9  481   27    5]\n",
-      " [   4    2    2   11  398   37]\n",
-      " [   3    5    0    1   10  135]]\n",
+      "[[1029   42   16   39   50    4]\n",
+      " [  52 1129   86   20   16    9]\n",
+      " [   3   49  294    2    1    0]\n",
+      " [  15   17   11  475   28    5]\n",
+      " [   6    4    2   10  393   39]\n",
+      " [   3    4    0    0    8  139]]\n",
       "\n",
-      "F1 Score (Validation): 0.8728\n",
+      "F1 Score (Validation): 0.8665\n",
       "\n",
-      "Testing accuracy: 88.6750\n",
+      "Testing accuracy: 88.5750\n",
       "\n",
       "Confusion Matrix (Test):\n",
-      "[[1048   29   11   45   34    8]\n",
-      " [  36 1208   88   16   11   14]\n",
+      "[[1048   32   11   41   37    6]\n",
+      " [  48 1208   81   14   11   11]\n",
       " [   1   33  287    1    2    1]\n",
-      " [  17   11    3  491   20    1]\n",
-      " [   4    4    5   12  401   22]\n",
-      " [   0    7    1    0   16  112]]\n",
+      " [  20   12    2  489   19    1]\n",
+      " [   6    5    4   12  396   25]\n",
+      " [   0    7    1    0   13  115]]\n",
       "\n",
-      "F1 Score (Test): 0.888474\n"
+      "F1 Score (Test): 0.887114\n"
      ]
     }
    ],
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -388,52 +388,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>curious</td>\n",
-       "      <td>0.015248</td>\n",
+       "      <td>0.016001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>impressed</td>\n",
-       "      <td>0.014739</td>\n",
+       "      <td>amazed</td>\n",
+       "      <td>0.015885</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>amazed</td>\n",
-       "      <td>0.014645</td>\n",
+       "      <td>impressed</td>\n",
+       "      <td>0.014937</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>surprised</td>\n",
-       "      <td>0.012682</td>\n",
+       "      <td>0.012138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>funny</td>\n",
-       "      <td>0.011457</td>\n",
+       "      <td>0.011345</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>overwhelmed</td>\n",
-       "      <td>0.010446</td>\n",
+       "      <td>0.011152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>weird</td>\n",
-       "      <td>0.009330</td>\n",
+       "      <td>0.009212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>amazing</td>\n",
-       "      <td>0.009000</td>\n",
+       "      <td>shocked</td>\n",
+       "      <td>0.008924</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>shocked</td>\n",
-       "      <td>0.008890</td>\n",
+       "      <td>amazing</td>\n",
+       "      <td>0.008875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>strange</td>\n",
-       "      <td>0.008668</td>\n",
+       "      <td>0.008464</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -441,19 +441,19 @@
       ],
       "text/plain": [
        "       Feature  Importance\n",
-       "0      curious    0.015248\n",
-       "1    impressed    0.014739\n",
-       "2       amazed    0.014645\n",
-       "3    surprised    0.012682\n",
-       "4        funny    0.011457\n",
-       "5  overwhelmed    0.010446\n",
-       "6        weird    0.009330\n",
-       "7      amazing    0.009000\n",
-       "8      shocked    0.008890\n",
-       "9      strange    0.008668"
+       "0      curious    0.016001\n",
+       "1       amazed    0.015885\n",
+       "2    impressed    0.014937\n",
+       "3    surprised    0.012138\n",
+       "4        funny    0.011345\n",
+       "5  overwhelmed    0.011152\n",
+       "6        weird    0.009212\n",
+       "7      shocked    0.008924\n",
+       "8      amazing    0.008875\n",
+       "9      strange    0.008464"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
